# nitic_kon_2025

./: README.md  package-lock.json  package.json
api/: auth.py  backend.md  main.py  pyproject.toml
api/api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
api/data/: timetable.db
src/: App.jsx  App.tsx  AppRoutes.tsx  Test.tsx  index.css  main.tsx
src/auth/: AuthContext.tsx
src/components/: Accordion.tsx  ProtectedRoute.tsx  SelectDayButton.tsx  calendar.tsx
src/components/footer/: footer.jsx  footer.tsx
src/components/header/: header.jsx  header.tsx
src/page/: Bandlist.tsx  Timetable.tsx  Top.tsx
src/pages/: AdminData.tsx  BandList.tsx  Login.tsx  TimeTable.tsx  Top.tsx
src/pages/admin/: AdminIndex.tsx  AdminLayout.tsx  AdminTimetableData.tsx  AdminUserData.tsx
src/types/: TimetableItem.d.tsx  User.d.tsx
